@@ -1,3 +1,8 @@
+2007-02-09  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/DevDiscover.pm:
+	New discovery param: template-registry-overlays
+
 2007-02-02  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* perllib/Torrus/DevDiscover/CiscoSCE.pm:
